@@ -443,27 +443,31 @@ ags_apply_presets_soundcard(AgsApplyPresets *apply_presets,
 	       NULL);
     
   /* reset export thread frequency */
-  export_thread = main_loop;
+  export_thread = ags_thread_find_type(main_loop,
+				       AGS_TYPE_EXPORT_THREAD);
   
-  while((export_thread = ags_thread_find_type(export_thread,
-					      AGS_TYPE_EXPORT_THREAD)) != NULL){
-    g_object_set(export_thread,
-		 "frequency", freq,
-		 NULL);
-
+  while(export_thread != NULL){
+    if(AGS_IS_EXPORT_THREAD(export_thread)){
+      g_object_set(export_thread,
+		   "frequency", freq,
+		   NULL);
+    }
+    
     /* iterate */
     export_thread = g_atomic_pointer_get(&(export_thread->next));
   }
 
   /* reset soundcard thread frequency */
-  soundcard_thread = main_loop;
+  soundcard_thread = ags_thread_find_type(main_loop,
+					  AGS_TYPE_SOUNDCARD_THREAD);
   
-  while((soundcard_thread = ags_thread_find_type(soundcard_thread,
-						 AGS_TYPE_SOUNDCARD_THREAD)) != NULL){
-    g_object_set(soundcard_thread,
-		 "frequency", freq,
-		 NULL);
-
+  while(soundcard_thread != NULL){
+    if(AGS_IS_SOUNDCARD_THREAD(export_thread)){
+      g_object_set(soundcard_thread,
+		   "frequency", freq,
+		   NULL);
+    }
+    
     /* iterate */
     soundcard_thread = g_atomic_pointer_get(&(soundcard_thread->next));
   }
