@@ -48,7 +48,7 @@
 
 #define AGS_SOUNDCARD_DEFAULT_FORMAT (AGS_SOUNDCARD_SIGNED_16_BIT)
 
-#define AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE (1024)
+#define AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE (2048)
 #define AGS_SOUNDCARD_MIN_BUFFER_SIZE (16)
 #define AGS_SOUNDCARD_MAX_BUFFER_SIZE (16384)
 
